--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -80,9 +80,9 @@
    "source": [
     "<p style='text-align: justify;'>\n",
     "Tutaj zakres projektu mógłby się zakończyć, ale nie chcieliśmy się ograniczać jedynie do głębokiego Q-learningu, \n",
-    "więc postanowiliśmy znaleźć zastosowanie dla innego zagadnienia z zakresu stucznej inteligencji - algorytmów \n",
-    "ewolucyjnych. Patrząc na sposób działania modelu DQN można zauważyć trzy obszary, które potencjalnie nadają się \n",
-    "do ulepszenia ewolucyjnego:\n",
+    "więc postanowiliśmy przeprowadzić mały eksperyment związany z innym zagadnieniem z zakresu stucznej \n",
+    "inteligencji - algorytmami ewolucyjnymi. Patrząc na sposób działania modelu DQN można zauważyć trzy obszary, które \n",
+    "potencjalnie nadają się do ulepszenia ewolucyjnego:\n",
     "</p>\n",
     "\n",
     "1. Kształt sieci neuronowej\n",
@@ -220,8 +220,8 @@
    "source": [
     "<p style='text-align: justify;'>\n",
     "Mówiąc konkretniej, samo trenowanie jednego modelu do stopnia, w którym jego wyniki są powtarzalne i pozwalają na \n",
-    "wyciąganie sensownych wniosków, zajmuje około 10 minut w najprostszym środowisku (CartPole), w drugim \n",
-    "co do złożoności LunarLander czas ten jest około 5 krotnie większy, natomiast w BipedalWalker jest aż 20 krotnie większy. \n",
+    "wyciąganie sensownych wniosków, zajmuje około 15 minut w najprostszym środowisku (CartPole), w drugim \n",
+    "co do złożoności LunarLander czas ten jest około 10 krotnie większy, natomiast w BipedalWalker jest aż 30 krotnie większy. \n",
     "Idąc dalej, po oszacowaniu, że do zakończenia projektu będziemy musieli trenować model w różnych konfiguracjach blisko \n",
     "100 razy, najtrudniejszym środowiskiem na jakie mogliśmy sobie pozwolić był Lunar Lander.\n",
     "</p>\n"
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "source": [
     "## <b>Naiwny agent losowy</b>\n",
-    "Pierwszy zaimplementowany przez nas agent podejmuje decyzje o tym, jaką akcę wykonać, w sposób losowy. Stanowi \n",
+    "Pierwszy zaimplementowany przez nas agent podejmuje decyzje o tym, jaką akcję wykonać, w sposób losowy. Stanowi \n",
     "swego rodzaju obiekt porównawczy dla późniejszych modeli. Jego implementacja wygląda następująco:\n"
    ],
    "metadata": {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import random\n",
@@ -303,13 +303,13 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4          # liczba agentów którzy będą wytrenowani od podstaw.\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import random\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class SimpleDqnNpc:\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4\n",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "game = gym.make(GAME_ID)\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "for model in range(NUM_OF_AGENTS):\n",
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -699,9 +699,9 @@
     "Ponadto na ten efekt złożył się też fakt, że kształt i parametry naszej sieci neuronowej nie są zbyt dobrze dobrane. \n",
     "Przede wszystkim liniowa funkcja aktywacji dla obu warstw to marnowanie potencjału wynikającego ze stosowania sieci neuronowej. \n",
     "Jeśli dana warstwa neuronów używa liniowej funkcji aktywacji do określenia pobudzenia poszczególnych neuronów, a \n",
-    "następnie przekazuje je jako impuls do kolejnej warstwy pobudzanej liniowo, to na końcu nie otrzymujemy niczego innego \n",
+    "następnie przekazuje ich wyjścia jako impuls do kolejnej warstwy pobudzanej liniowo, to na końcu nie otrzymujemy niczego innego \n",
     "niż po prostu pewną funkcję liniową określoną na podstawie wartości wejść pierwszej. To oznacza, że wszystkie znajdujące się\n",
-    "obok siebie warstwy z liniową funkcją aktywacji mogą po prostu zostać zamienione w jedną warstwę. Innym problemem funkcji\n",
+    "obok siebie warstwy z liniową funkcją aktywacji mogą po prostu zostać zamienione w jedną warstwę. Co więcej, innym problemem funkcji\n",
     "liniowej jest to, że w miarę dotrenowywania jej wartości na wyjściu mogą zmierzać do nieskończoności, aż w pewnym\n",
     "momencie przepełnić stos i być interpretowane jako <i>NaN</i>.\n"
    ],
@@ -715,9 +715,9 @@
     "<p style='text-align: justify;'>\n",
     "Drugim, poza funkcją straty, rzucającym się w oczy parametrem jest funkcja optymalizacji. Użyliśmy algorytmu \n",
     "stochastycznego spadku wzdłuż gradientu, który skupia się na określeniu tendencji optymalizowanej funkcji \n",
-    "biorąc pod uwagę jedynie położenie, w którym znajduje się w danym momencie. Jeśli zastanowimy się dłużej \n",
-    "nad tym, jaki efekt chcemy osiągnąć w modelu DQN, to dojdziemy do wniosku, że ważne jest dla nas skupianie \n",
-    "się nie na jednym, a na kilku krokach naprzód. \n",
+    "biorąc pod uwagę jedynie położenie, w którym znajduje się w danym momencie. Jeśli nasza teoria o wpadnięciu \n",
+    "w minimum lokalne jest prawdziwa, to warto byłoby wykorzystać jeden z algorytmów, który jest nieco bardziej\n",
+    "odporny na wpadanie w minima.\n",
     "</p>\n"
    ],
    "metadata": {
@@ -760,18 +760,18 @@
     "czynności:\n",
     "</p>\n",
     "\n",
-    "1. Dodanie współczynnika niepewności <b>discountrate</b> wobec przewidzianego wyniku oraz uwzględnienie otrzymanej \n",
-    "nagrody w każym przypadku.\n",
-    "2. Rezygnacja z zerowania wartości współczynnika uczenia po osiągnięciu progu 0.1.\n",
-    "3. Zmiana funkcji aktywacji pierwszej warstwy na <b>relu</b> ze względu na jej charakterystykę - dla wartości mniejszych od \n",
+    "1. <p style='text-align: justify;'>Dodanie współczynnika niepewności <b>_discount_rate</b> wobec przewidzianego wyniku oraz uwzględnienie otrzymanej \n",
+    "nagrody w każym przypadku.</p>\n",
+    "2. <p style='text-align: justify;'>Rezygnacja z zerowania wartości współczynnika uczenia po osiągnięciu progu 0.1.</p>\n",
+    "3. <p style='text-align: justify;'>Zmiana funkcji aktywacji pierwszej warstwy na <b>relu</b> ze względu na jej charakterystykę - dla wartości mniejszych od \n",
     "zera zwraca 0, dzięki czemu istnieje duże prawdopodobieństwo, że część neuronów nie zostanie pobudzona, \n",
     "co sprawi, że sieć neuronowa będzie działała szybciej, a w naszym przypadku jest to bardzo duża zaleta. Niemniej jednak\n",
     "w połączeniu z funkcją liniową na wyjściu, wciąż mógłby pojawić się problem z wartościami na wyjściu zmierzającymi do nieskończoności, więc zdecydowaliśmy się \n",
-    "dodać ukrytą warstwę z sigmoidalną funkcją aktywacji, która zwraca wartości od 0 do 1, a więc skutecznie przeskaluje wyniki.\n",
-    "4. Zmiana funkcji optymalizacji na <b>ADAM</b>, która usprawnia scholastyczny algorytm gradientu o dodanie wartości pędu, co \n",
+    "dodać ukrytą warstwę z sigmoidalną funkcją aktywacji, która zwraca wartości od 0 do 1, a więc skutecznie przeskaluje wyniki.</p>\n",
+    "4. <p style='text-align: justify;'>Zmiana funkcji optymalizacji na <b>ADAM</b>, która usprawnia scholastyczny algorytm gradientu o dodanie wartości pędu, co \n",
     "pozwala na unikanie minimów lokalnych. Działa to zupełnie jak w fizyce - jeśli kula toczy się w dół zbocza i na drodze \n",
     "napotka kamień, to mimo wszystko będzie w stanie się po nim przetoczyć dzięki nabranemu wcześniej pędowi, więc ominie \n",
-    "swoje minimum lokalne. \n"
+    "swoje minimum lokalne. </p>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import random\n",
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "class SimpleDqnNpcV2:\n",
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4\n",
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "game = gym.make(GAME_ID)\n",
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "for model in range(NUM_OF_AGENTS):\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -988,7 +988,7 @@
     "\n",
     "### Wnioski\n",
     "<p style='text-align: justify;'>\n",
-    "Niestety tym razem wyniki agenta w liczbach prezentują się nieco gorzej. Aczkolwiek duży progres można zauważyć po \n",
+    "Niestety tym razem wyniki agenta w liczbach prezentują się nieco gorzej, pomimo że duży progres można zauważyć po \n",
     "przejrzeniu nagrań wideo. Przez około 70 pierwszych gier agent wyraźnie próbuje utrzymać trajektorię lotu w taki \n",
     "sposób, aby kolizja z podłożem miała miejsce dokładnie na lądowisku:\n",
     "</p>\n"
@@ -1039,7 +1039,7 @@
     "<p style='text-align: justify;'>\n",
     "Gdy agent osiągnął próg blisko 160 gier okazało się, dlaczego wynik tego modelu jest gorszy od poprzednika.\n",
     "Agent po prostu zaniechał wszelkich prób lądowania i zaczął jedynie utrzymywać się nieruchomo w \n",
-    "powietrzu:\n",
+    "powietrzu zdobywając regularnie po -500 pkt:\n",
     "</p>\n"
    ],
    "metadata": {
@@ -1079,10 +1079,10 @@
     "\n",
     "1. Zwiększenie pamięc agenta, żeby douczał się na danych z szerszego okresu. Dzięki temu unikniemy sytuacji, \n",
     "w których agent spędzając zbyt dużo czasu w prawie niezmienionym stanie, będzie wielokrotnie trenował się na bardzo \n",
-    "podobnych do siebie danych.\n",
+    "podobnych do siebie danych (i ich przeuczał)\n",
     "2. Poszerzenie dwóch pierwszych warstw sieci neuronowej, aby uzyskać dodatkowe kombinacje i połączenia tworzące \n",
     "więcej ścieżek do aktywacji.\n",
-    "3. Dodanie do każdej warstwy funkcji Dropout, która w trakcie trenowania dezaktywuje część neuronów równą\n",
+    "3. Dodanie do każdej warstwy funkcji Dropout, która w trakcie trenowania dezaktywuje losową część neuronów równą\n",
     "przyjętemu jako argument ułamkowi.\n",
     "\n",
     "<p style='text-align: justify;'>\n",
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "from keras.layers import Dropout\n",
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "class SimpleDqnNpcV3:\n",
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4\n",
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "num_of_actions = game.action_space.n\n",
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "for model in range(NUM_OF_AGENTS):\n",
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Modyfikowanie ewolucyjne\n",
+    "### Eksperyment modyfikowania ewolucyjnego\n",
     "\n",
     "<p style='text-align: justify;'>\n",
     "Zgodnie z tym, co napisaliśmy w pierwszym rozdziale, następna faza będzie poświęcona próbie genetycznego \n",
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "NUM_OF_AGENTS = 4\n",
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "game = gym.make(GAME_ID)\n",
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "for i in range(NUM_OF_AGENTS): # Wczytywanie poprzednio wytenowanych agentów\n",
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -1567,8 +1567,48 @@
     "                new_weights[i + 1] = parent2_weights[i + 1] # zamiana biasu\n",
     "            i+=2 # Iteracja co dwa, żeby bias został zamieniony razem z warstwą wag\n",
     "        worst_agent_idx = np.argmin(avgs)\n",
-    "        npcs[worst_agent_idx]._model.set_weights(new_weights)\n",
-    "\n",
+    "        npcs[worst_agent_idx]._model.set_weights(new_weights)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> <p style='text-align: justify;'>\n",
+    "Zaimplementowany przez nas algorytm powinien być dość jasny: <br/>\n",
+    "W każdym pokoleniu pozwalamy agentom rozegrać po 100 gier. Wyniki każdego osobnika zapisujemy, a następnie \n",
+    "wyciągamy z nich średnią. Wyłuskujemy wartości wag dwóch najlepszych osobników, potomkowi przypisujemy\n",
+    "wagi pierwszego rodzica, a następnie z prawdopodobieństwem 50% zamieniamy kolejno wagi jego warstw z wagami\n",
+    "drugiego rodzica. Co istotne, razem z zamianą wag dla danej warstwy zamieniamy również wartości bias. Po \n",
+    "zakończeniu krzyżowania nowego osobnika wpisujemy w miejsce najgorszego osobnika z populacji. Proces ten\n",
+    "iteracyjnie powtarzamy.\n",
+    "</p>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avarage of super agent is: -117.86025583039657\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"Avarage of super agent is: {}\".format(np.amax(avgs)))"
    ],
    "metadata": {
@@ -1581,30 +1621,58 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Wnioski\n",
+    "### Wnioski z eksperymentu\n",
     "<p style='text-align: justify;'>\n",
     "Powyższy algorytm uruchamialiśmy dokładnie 50 razy. Wyniki przez niego osiągane nie były jednostajne - \n",
-    "Dokłądnie w 55 % przypadków \"super agent\" rzeczywiście okazywał się być lepszy od pokolenia początkowego, \n",
-    "a w pozostałych okazywał się być gorszy(jak chociażby powyżej). Próbowaliśmy przeanalizować proces, w jakim \n",
+    "Dokładnie w 55% przypadków \"super agent\" rzeczywiście okazywał się być lepszy od pokolenia początkowego, \n",
+    "jednakże w pozostałych był gorszy(jak chociażby powyżej). Przeanalizowaliśmy sposób, w jaki\n",
     "zmieniają się wyniki osiągane przez kolejne pokolenia, niemniej jednak nie byliśmy w stanie doszukać się żadnej\n",
     "reguły. \n",
-    "</p>\n",
-    "\n",
-    "<p style='text-align: justify;'>\n",
-    "Ciężko jest jednoznacznie stwierdzić, czy eksperyment jest udany. Jego porażki, czy też niepewnego sukcesu, \n",
-    "doszukujemy się w tym, że osobniki z populacji początkowej nie były należycie wyszkolone. Ze względu na brak \n",
-    "mocy obliczeniowej mogliśmy trenować ich jedynie na 200 grach (co i tak zajęło niebagatelne 10 godzin). \n",
-    "Uważamy, że cały proces trenowania na osiągnietych przez nas modelach byłby wart powtórzenia na komputerze \n",
-    "przeznaczonym do trenowania sztucznej inteligencji.\n",
-    "\n",
-    "\n",
-    "Dziękujemy za uwagę!"
+    "</p>\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<p style='text-align: justify;'>\n",
+    "Ciężko jest jednoznacznie stwierdzić, czy eksperyment z algorytmem genetycznym jest udany. Jego porażki, czy \n",
+    "też niepewnego sukcesu, doszukujemy się w tym, że osobniki z populacji początkowej nie były należycie wyszkolone. \n",
+    "Jak już wspomnieliśmy wcześniej, ze względu na brak mocy obliczeniowej każdego agenta mogliśmy trenować na jedynie \n",
+    "200 grach (Dla całej populacji początkowej zajęło to niebagatelne 10 godzin), co nie było w stanie zapewnić nam\n",
+    "na tyle dużej stabilności wyników, żeby jasno określić, który z agentów tego samego modelu jest\n",
+    "znacznie lepszy od drugiego, przez co wybory osobników do krzyżowania mogły okazać się chybione.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Biorąc jednak pod uwagę całą wykonaną pracę - zarówno wszystkie etapy powstawania modeli DQN jak i stworzenie\n",
+    "algorytmu genetycznego - ośmielimy się stwierdzić, że rezultaty tutaj osiągnięte napawają optymizmem na przyszłość. \n",
+    "Uważamy, że warto byłoby wytrenować wszystkie te modele raz jeszcze, ale tym razem na komputerze detykowanym \n",
+    "sztucznej inteligencji.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***\n",
+    "\n",
+    "###### Dziękujemy za uwagę!"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
